# EvidenceAgent-MM

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  dvc.yaml  pyproject.toml  run_manifest.md
.github/workflows/: ci.yml
benchmarks/eamm_bronze/: manifest.json  questions.jsonl
benchmarks/eamm_bronze/fixtures/: eamm-000.json  eamm-001.json  eamm-002.json  eamm-003.json  eamm-004.json  eamm-005.json  eamm-006.json  eamm-007.json  eamm-008.json  eamm-009.json  eamm-010.json  eamm-011.json
benchmarks/results/: README.md  ablations.json  api_load_autodl.json  api_load_local.json  cpu_bronze.json
benchmarks/results/gpu/: asr_small_4090.json  bge_m3_4090.json  demo_media_sha256.txt  diarization_fallback_smoke.json  environment.json  ocr_4090.json  ocr_environment.json  qwen3_8b_4090.json
docs/: ARCHITECTURE.md  AUTODL_ARCHIVE.md  DATASET_CARD.md  DESIGN_SYSTEM.md  MODEL_CARD.md  RELEASE_NOTES_v0.1.0.md
docs/tutorials/: evidenceagent_mm_from_scratch_tutorial.html  evidenceagent_mm_from_scratch_tutorial.md  evidenceagent_mm_from_scratch_tutorial.review.json
hub/model/: ARTIFACTS.md  README.md  system_config.json
hub/model/provenance/: core-requirements-freeze.txt  gpu-requirements-freeze.txt  nvidia-smi-q.txt  sha256-archive-final.txt  (+2 more)
scripts/: bge_smoke.py  diarization_smoke.py  generate_demo_media.py  gpu_asr_smoke.py  install_gpu_env.sh  install_ocr_env.sh  load_test.py  ocr_smoke.py  qwen_smoke.py  run_ablations.py  verify_autodl_archive.py
src/evidenceagent_mm/: __init__.py  __main__.py  agent.py  api.py  benchmark.py  cli.py  evaluation.py  experiments.py  generation.py  graph.py  perception.py  pipeline.py  provenance.py  retrieval.py  schema.py  store.py
tests/: conftest.py  test_agent.py  test_api.py  test_benchmark_cli.py  test_evaluation.py  test_experiments.py  test_graph.py  test_load_test.py  test_perception_fallback.py  test_provenance.py  test_schema.py  test_store_retrieval.py
(+1 files in other folders)
